Configure CORS allowed origins via environment variable